@@ -1,3 +1,8 @@
+2009-10-19  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* fns.c: Remove code for unsupported system: MAC_OS.
+	* image.c: Likewise.  Include setjmp.h.
+
 2009-10-19  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xterm.c (x_create_toolkit_scroll_bar): Don't allocate color for
